--- a/nesta/styl/bumpchart2.styl
+++ b/nesta/styl/bumpchart2.styl
@@ -3,7 +3,7 @@
 		font-size 10px
 
 		.tick
-			cursor pointer
+			cursor default
 			
 			&.blured
 				text
@@ -16,15 +16,15 @@
 
 	.vis__graph
 		&__line
-			cursor pointer
+			//cursor pointer
 			
 			&__line
-				stroke none
+				stroke rgba(255, 255, 255, .5)
 				
 			&__bg
 				fill none
 				stroke rgba(255, 255, 255, 0)
-				stroke-width 7
+				stroke-width 3
 
 			&.blured
 				opacity .2
