--- a/nesta/styl/filter.styl
+++ b/nesta/styl/filter.styl
@@ -12,13 +12,17 @@
 	
 	&__group
 		font-size 12px
-		margin-bottom 20px
+		margin-bottom 10px
 		overflow hidden
 		
 		h1
 			margin 0 0 5px
 			font-size 14px
 			text-transform uppercase
+			
+		&__text
+			margin 0
+			font-size 12px
 			
 		select
 			width 200px
