--- a/nesta/styl/filter.styl
+++ b/nesta/styl/filter.styl
@@ -56,6 +56,17 @@
 				&--center
 					text-align center
 					
+		&__thickness-sample
+			&__min
+				font-size 12px
+				text-anchor start
+				fill #000
+				
+			&__max
+				font-size 12px
+				text-anchor end
+				fill #000
+					
 		&__samples
 			margin 0
 			padding 0
@@ -63,7 +74,13 @@
 			
 			&__sample
 				vertical-align middle
+				text-align center
 				width 30px
+				
+				&__color
+					display inline-block
+					width 15px
+					height 15px
 				
 			&__desc
 				vertical-align middle
