--- a/nesta/styl/forcegraph.styl
+++ b/nesta/styl/forcegraph.styl
@@ -6,18 +6,18 @@
 	.vis__graph
 		&__links
 			&__link
-				stroke rgb(100, 100, 100)
-				stroke-width .02
+				stroke rgba(150, 150, 150, .4)
+				//stroke-width .02
 			
 				&.blured
-					stroke rgb(200, 200, 200)
+					stroke rgba(200, 200, 200, .1)
 					
 				&.selected
-					stroke-width .1
+					//stroke-width .1
 					
 				&.muted
-					stroke rgb(220, 220, 220)
-					stroke-width .01
+					stroke rgba(200, 200, 200, .1)
+					//stroke-width .01
 		
 		&__nodes
 			&__node
