--- a/nesta/styl/filter.styl
+++ b/nesta/styl/filter.styl
@@ -27,6 +27,23 @@
 		select
 			width 200px
 			
+		&__slider
+			position relative 
+			
+			&__control
+				margin 10px 15px 40px
+			
+			&__tick
+				position absolute
+				top 20px
+				-ms-transform translateX(-50%)
+				-webkit-transform translateX(-50%)
+				transform translateX(-50%)
+				cursor pointer
+				
+				&.selected
+					font-weight bold
+			
 		&__option
 			display block
 			padding 0
