--- a/nesta/styl/forcegraph.styl
+++ b/nesta/styl/forcegraph.styl
@@ -28,14 +28,12 @@
 					stroke none
 				
 				&__circle
-					stroke #777
 					stroke-width .5
 				
 				&.blured
 					.vis__graph__nodes__node__circle
-						stroke none
-						opacity .2
-						fill #ccc
+						fill rgba(200, 200, 200, .5)
+						opacity .6
 						
 				&.selected
 					.vis__graph__nodes__node__circle
@@ -47,8 +45,7 @@
 					
 					.vis__graph__nodes__node__circle
 						stroke none
-						fill #ccc
-						opacity .2
+						fill rgba(200, 200, 200, .2)
 					
 						
 	.vis__hint
