--- a/nesta/styl/forcegraph.styl
+++ b/nesta/styl/forcegraph.styl
@@ -60,6 +60,12 @@
 				&.overlapped
 					visibility hidden
 					
+				&.blured
+					visibility hidden
+					
+				&.muted
+					visibility hidden
+					
 				&__bg
 					stroke #999
 					fill #fff
@@ -67,7 +73,7 @@
 					
 				&__text
 					text-anchor middle
-					font-size 14px
+					font-size 10px
 					fill #000
 					
 						
