--- a/nesta/css/forcegraph.css
+++ b/nesta/css/forcegraph.css
@@ -49,6 +49,12 @@
 .vis--forcegraph .vis__graph__labels__label.overlapped {
   visibility: hidden;
 }
+.vis--forcegraph .vis__graph__labels__label.blured {
+  visibility: hidden;
+}
+.vis--forcegraph .vis__graph__labels__label.muted {
+  visibility: hidden;
+}
 .vis--forcegraph .vis__graph__labels__label__bg {
   stroke: #999;
   fill: #fff;
@@ -56,7 +62,7 @@
 }
 .vis--forcegraph .vis__graph__labels__label__text {
   text-anchor: middle;
-  font-size: 14px;
+  font-size: 10px;
   fill: #000;
 }
 .vis--forcegraph .vis__hint {
