--- a/nesta/css/geovis.css
+++ b/nesta/css/geovis.css
@@ -13,33 +13,41 @@
   font-size: 12px;
   fill: #000;
 }
-.vis--geovis .vis__map--left .vis__map__lads__lad.highlighted {
-  fill: #666;
+.vis--geovis .vis__map__lads__land {
+  fill: #fcfcfc;
+  stroke: #eee;
+  stroke-width: 2;
 }
-.vis--geovis .vis__map--right .vis__map__lads__lad.highlighted {
-  fill: #666;
+.vis--geovis .vis__map__lads__land--featured {
+  stroke: #dedede;
 }
 .vis--geovis .vis__map__lads__lad {
-  stroke-width: 1;
-  stroke: #fff;
   cursor: pointer;
 }
-.vis--geovis .vis__map__lads__lad.no-data {
-  fill: #eee;
+.vis--geovis .vis__map__lads__lad circle {
+  stroke: none;
+  fill: rgba(200,200,200,0.6);
 }
-.vis--geovis .vis__map__lads__lad.hovered,
-.vis--geovis .vis__map__lads__lad.highlighted.hovered {
-  fill: #888;
+.vis--geovis .vis__map__lads__lad:hover circle {
+  stroke-width: 2;
+  stroke: rgba(150,150,150,0.3);
 }
-.vis--geovis .vis__map__lads__lad.selected {
-  fill: #333;
+.vis--geovis .vis__map__lads__lad.selected circle {
+  stroke-width: 2;
+  stroke: rgba(100,100,100,0.5);
+}
+.vis--geovis .vis__map__lads__lad.highlighted circle {
+  stroke-width: 1;
+  stroke: rgba(150,150,150,0.3);
+}
+.vis--geovis .vis__map__lads__lad.blured circle {
+  fill: rgba(220,220,220,0.3);
 }
 .vis--geovis .vis__map__lads__lad.inactive {
-  fill: #f3f3f3;
-  cursor: default;
+  visibility: hidden;
 }
 .vis--geovis .vis__map__border {
-  stroke: #000;
+  stroke: #fff;
   stroke-width: 2;
   fill: none;
 }
@@ -55,45 +63,14 @@
   stroke-width: 1;
   fill: none;
 }
-.vis--geovis .vis__map__connections__line.highlighted .vis__map__connections__line__line,
-.vis--geovis .vis__map__connections__line.highlighted .vis__map__connections__line__point {
+.vis--geovis .vis__map__connections__line:hover .vis__map__connections__line__line {
   opacity: 1;
 }
 .vis--geovis .vis__map__connections__line.blured {
   visibility: hidden;
 }
-.vis--geovis .vis__map__connections__line.blured .vis__map__connections__line__line {
-  stroke: #444;
-}
 .vis--geovis .vis__divider {
   stroke: #999;
-}
-.vis--geovis .vis__hint {
-  pointer-events: none;
-}
-.vis--geovis .vis__hint rect {
-  fill: #fff;
-  stroke: #999;
-  opacity: 0.8;
-}
-.vis--geovis .vis__hint text {
-  text-anchor: start;
-  alignment-baseline: before-edge;
-}
-.vis--geovis .vis__hint__city {
-  font-weight: bold;
-  font-size: 14px;
-}
-.vis--geovis .vis__hint__employment,
-.vis--geovis .vis__hint__business {
-  font-size: 12px;
-}
-.vis--geovis .vis__hint__topic {
-  font-size: 12px;
-}
-.vis--geovis .vis__hint__topic.selected {
-  font-weight: bold;
-  fill: #c80000;
 }
 .vis--geovis .vis__controls__button {
   cursor: pointer;
@@ -108,58 +85,23 @@
   font-size: 12px;
   fill: #000;
 }
-.vis--geovis .vis__map__hints {
+.vis--geovis .vis__hints {
   pointer-events: none;
 }
-.vis--geovis .vis__map__hints text {
+.vis--geovis .vis__hints text {
   text-anchor: middle;
   alignment-baseline: central;
   font-size: 12px;
 }
-.vis--geovis .vis__map__hints rect {
+.vis--geovis .vis__hints rect {
   stroke: #999;
   fill: rgba(255,255,255,0.7);
 }
-.vis--geovis .vis__legend__bg {
-  stroke: #444;
-  stroke-width: 1;
-  fill: #fff;
-}
-.vis--geovis .vis__legend text {
-  font-size: 10px;
-}
 .title {
-  position: absolute;
-  z-index: 100;
-  left: 10px;
-  top: 10px;
-  margin: 0;
-  font-size: 18px;
-}
-.legend {
   position: fixed;
-  right: 5px;
+  left: 5px;
   top: 5px;
-  bottom: 5px;
-  width: 200px;
-  border: 1px solid #999;
-  background: rgba(255,255,255,0.8);
-  padding: 5px;
-  font-size: 12px;
-  overflow: auto;
-}
-.legend h1 {
-  margin: 20px 0 10px;
-  font-size: 14px;
-  text-transform: uppercase;
-}
-.legend label {
-  display: block;
-  margin: 0 0 5px;
-  overflow: hidden;
-}
-.legend label input {
-  position: relative;
-  float: left;
-  top: -2px;
+  margin: 0;
+  font-size: 16px;
+  z-index: 10;
 }
