--- a/nesta/styl/geovis.styl
+++ b/nesta/styl/geovis.styl
@@ -14,7 +14,7 @@
 			font-size 12px
 			fill #000
 
-		&__lads
+		&__lands
 			&__land
 				fill #fcfcfc
 				stroke #eee
@@ -23,6 +23,7 @@
 				&--featured
 					stroke #dedede
 
+		&__lads
 			&__lad
 				cursor pointer
 				
