--- a/nesta/styl/vislayout.styl
+++ b/nesta/styl/vislayout.styl
@@ -47,6 +47,9 @@ filter-width = 220px
 		border 1px solid #ccc
 		box-shadow 0 0 0px 3px rgba(50, 50, 50, .1);
 		
+		-webkit-transition left .5s, top .5s
+		transition left .5s, top .5s
+		
 		p
 			margin 0 0 10px
 			font-size 12px
