--- a/nesta/css/filter.css
+++ b/nesta/css/filter.css
@@ -1,8 +1,14 @@
 .filter {
-  position: relative;
+  position: fixed;
+  right: 5px;
+  top: 5px;
+  bottom: 5px;
   overflow: auto;
+  width: 200px;
   padding: 10px;
   background: #fff;
+  border: 1px solid #eee;
+  z-index: 100;
 }
 .filter__group {
   font-size: 12px;
