--- a/nesta/styl/geovis.styl
+++ b/nesta/styl/geovis.styl
@@ -78,6 +78,27 @@
 					
 				&.blured
 					visibility hidden
+					
+		&__labels
+			&__label
+				pointer-events none
+
+				rect
+					fill rgba(255, 255, 255, 0.5)
+
+				text
+					font-size 10px
+					fill #000
+					text-anchor middle
+					
+				&.blured
+					visibility hidden
+					
+				&.inactive
+					visibility hidden
+					
+				&.overlapped
+					visibility hidden
 						
 	.vis__divider
 		stroke #999
