--- a/nesta/styl/geovis.styl
+++ b/nesta/styl/geovis.styl
@@ -8,10 +8,11 @@
 			stroke none
 			fill #fff
 			
-		&__label
+		&__title
 			pointer-events none
 			text-anchor middle
-			font-size 12px
+			font-size 14px
+			font-weight bold
 			fill #000
 
 		&__lands
