--- a/nesta/styl/bumpchart2.styl
+++ b/nesta/styl/bumpchart2.styl
@@ -2,13 +2,15 @@
 	.vis__axis
 		font-size 10px
 		
-		&--left, &--right
-			.domain
-				//visibility hidden
-				stroke #ddd
+		.domain
+			//visibility hidden
+			stroke #ccc
 
 		.tick
 			cursor default
+			
+			line
+				stroke #ccc
 			
 			&.blured
 				text
@@ -22,7 +24,7 @@
 	.vis__graph
 		&__grid
 			&__line
-				stroke #eee
+				stroke #ccc
 
 		&__line
 			//cursor pointer
