--- a/css/main.styl
+++ b/css/main.styl
@@ -57,7 +57,7 @@ a
         bottom 1px
         height 10px
         background #4d4d4d
-        opacity .125
+        opacity .1
         
     &:hover
         &:before
@@ -117,12 +117,14 @@ a
         
     &__pics
         margin-top 10px
-        height 200px
         position relative
         overflow hidden
         
         a
             color black
+            
+            &:before
+                display none
             
             img
                 position relative
