--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,8 @@ a {
 a:before {
   content: '';
   position: absolute;
-  left: 0;
-  right: 0;
+  left: -2px;
+  right: -2px;
   bottom: 1px;
   height: 10px;
   background: #4d4d4d;
