--- a/css/main.styl
+++ b/css/main.styl
@@ -52,8 +52,8 @@ a
     &:before
         content ''
         position absolute
-        left 0
-        right 0
+        left -2px
+        right -2px
         bottom 1px
         height 10px
         background #4d4d4d
