--- a/css/main.styl
+++ b/css/main.styl
@@ -164,6 +164,9 @@ a
     &__desc
         margin-top 10px
         
+        img
+            width 100%
+        
     &__pics
         margin-top 10px
         position relative
@@ -182,6 +185,7 @@ a
                 display block
                 height 200px
                 
+                
     &__meta
         position absolute
         left 100%
@@ -197,7 +201,7 @@ a
         overflow hidden
         
         &__item
-            box-sizing: border-box;
+            box-sizing border-box
             position relative
             float left
             width 25%
