--- a/css/main.styl
+++ b/css/main.styl
@@ -52,16 +52,16 @@ a
     &:before
         content ''
         position absolute
-        left -2px
-        right -2px
+        left -1px
+        right -1px
         bottom 1px
-        height 10px
+        height 2px
         background #4d4d4d
-        opacity .1
+        opacity .2
         
     &:hover
         &:before
-            opacity .2
+            opacity 1
             background #0030ff
     
     
@@ -230,4 +230,61 @@ a
             &:hover
                 p
                     opacity 0
+                    
+    &__screens
+        &__menu
+            text-align center
+            padding 20px 0
+            
+            &--top
+                padding-top 20px
+                
+            &--bottom
+                padding-bottom 20px
+            
+            &__item
+                border 1px solid #dbdbdb
+                padding 0 5px
+                
+                &:before
+                    display none
+                    
+                & + &
+                    margin-left 5px
+                    
+                &:hover
+                    border 1px solid #0030ff
+                    
+                &--active
+                    border 1px solid #000 !important
+                    cursor default
+                    
+        &__frame
+            position relative
+            width 100%
+            
+            &__device
+                position absolute
+                width 100%
+                height 100%
+                background-size contain
+                background-repeat no-repeat
+                background-position center center
+                z-index 2
+                display none
+                
+                &--mac
+                    background-image url('../img/macbook.png')
+
+                &--ipad
+                    background-image url('../img/ipad.png')
+
+                &--iphone
+                    background-image url('../img/iphone.png')
+                    
+            &__content
+                position absolute
+                left 50%
+                z-index 1
+                background-size cover
         
