--- a/css/main.styl
+++ b/css/main.styl
@@ -52,8 +52,8 @@ a
     &:before
         content ''
         position absolute
-        left -1px
-        right -1px
+        left 0px
+        right 0px
         bottom 1px
         height 2px
         background #4d4d4d
@@ -143,6 +143,7 @@ a
     margin-bottom 30px
     margin-left menuWidth + menuContentGap
     margin-right rightMargin
+    z-index 1
 
 .project
     position relative
@@ -270,7 +271,7 @@ a
                 background-size contain
                 background-repeat no-repeat
                 background-position center center
-                z-index 2
+                z-index 3
                 display none
                 
                 &--mac
@@ -285,6 +286,12 @@ a
             &__content
                 position absolute
                 left 50%
-                z-index 1
+                z-index 2
                 background-size cover
+                
+.page-expander
+    position absolute
+    top 0px
+    width 1px
+    z-index 0
         
