--- a/css/main.styl
+++ b/css/main.styl
@@ -232,6 +232,16 @@ a
                 p
                     opacity 0
                     
+        &--big
+            .project__gallerie__item
+                width 50%
+                
+                &:before
+                    display none
+                    
+                p
+                    padding-left 7px
+                    
     &__screens
         &__menu
             text-align center
@@ -288,6 +298,7 @@ a
                 left 50%
                 z-index 2
                 background-size cover
+                background-repeat no-repeat
                 
 .page-expander
     position absolute
